[project]
name = "application-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.2",
    "langchain-openai>=1.1.1",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "replicate>=1.0.7",
    "streamlit>=1.52.1",
]
